<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CallRejector</string>
    <string name="action_settings">Settings</string>
    <string name="back_button_text">Back</string>
    <string name="schedule_title_name">Schedule</string>
    <string name="edit_button_text">Edit</string>
    <string name="add_button_text">+</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="automatic_text_message">Automatic Text Message</string>
    <string name="save_button_text">Save</string>
	<string name="Start_Time">Start Time</string>
	<string name="End_Time">End Time</string>
	<string name="Next_button_text">Next</string>
	
</resources>
