<?xml version="1.0" encoding="utf-8"?>
<!-- Created By Brandon Feist -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/Cancel_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="CancelMakingRejectionBlock"
            android:text="@string/cancel_button_text" />

        <Button
            android:id="@+id/End_Time_Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="next"
            android:text="@string/Next_button_text" />
    </LinearLayout>

    <TextView 
        android:id="@+id/start_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Start_Time"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/> 
    
    <TimePicker
        android:id="@+id/start_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    
    <TextView 
        android:id="@+id/end_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/End_Time"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"/>
    
    <TimePicker 
        android:id="@+id/end_time_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>

    <!--
    	<Button
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="EndTime"
        android:text="End Time" />

    <Button
        android:id="@+id/repeat_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RepeatDaysActivity"
        android:text="Repeat" />
       

    <EditText
        android:id="@+id/SMS_Message"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="start"
        android:hint="@string/automatic_text_message" />
   
   -->

</LinearLayout>